deploy/kubernetes-1.17/csi-sanlock-lvm-init.var.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Pod
metadata:
  name: csi-sanlock-lvm-init
spec:
  containers:
    - name: init
      image: quay.io/aleofreddi/lvmctrld:v0.4.1
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c", "sanlock daemon -w 0; lvmlockd --host-id 2000; bash"]
      stdin: true
      stdinOnce: true
      tty: true
      volumeMounts:
        - mountPath: /dev
          name: dev-dir
        - mountPath: /lib/modules
          name: modules-dir
          readOnly: true
      securityContext:
        privileged: true
        capabilities:
          add:
            - SYS_MODULE
          drop:
            - ALL
  restartPolicy: Never

  volumes:
    - hostPath:
        path: /dev
        type: Directory
      name: dev-dir
    - hostPath:
        path: /lib/modules
        type: Directory
      name: modules-dir
