deploy/kubernetes-1.17/setup-snapshot-controller.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://raw.githubusercontent.com/kubernetes-csi/external-snapshotter/master/deploy/kubernetes/snapshot-controller/setup-snapshot-controller.yaml

# This YAML file shows how to deploy the snapshot controller

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: snapshot-controller
spec:
  serviceName: "snapshot-controller"
  replicas: 1
  selector:
    matchLabels:
      app: snapshot-controller
  template:
    metadata:
      labels:
        app: snapshot-controller
    spec:
      serviceAccount: snapshot-controller
      containers:
        - name: snapshot-controller
          # NOTE: replace with official image when released: quay.io/k8scsi/snapshot-controller:v2.0.0
          image: quay.io/k8scsi/snapshot-controller:v2.0.0-rc4
          args:
            - "--v=5"
            - "--leader-election=false"
          imagePullPolicy: Always
