deploy/kubernetes-1.17/csi-sanlock-lvm-socat.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# WARNING: this is only for testing purposes. Do not install in a production
# cluster.
#
# This exposes the csi-sanlock-lvm's Unix domain csi.sock as a TCP port to the
# outside world. The mapping from Unix domain socket to TCP is done
# by socat.
#
# This is useful for testing with csi-sanity or csc.

apiVersion: v1
kind: Service
metadata:
  name: csi-sanlock-lvm-service
spec:
  type: NodePort
  selector:
    app: csi-sanlock-lvm-socat
  ports:
  - port: 10000 # fixed port inside the pod, dynamically allocated port outside
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: csi-sanlock-lvm-socat
spec:
  serviceName: "csi-sanlock-lvm-socat"
  replicas: 1
  selector:
    matchLabels:
      app: csi-sanlock-lvm-socat
  template:
    metadata:
      labels:
        app: csi-sanlock-lvm-socat
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - csi-sanlock-lvm-plugin
            topologyKey: kubernetes.io/hostname
      containers:
        - name: socat
          image: alpine/socat:1.0.3
          args:
            - tcp-listen:10000,fork,reuseaddr
            - unix-connect:/csi/csi.sock
          securityContext:
            # This is necessary only for systems with SELinux, where
            # non-privileged sidecar containers cannot access unix domain socket
            # created by privileged CSI driver container.
            privileged: true
          volumeMounts:
          - mountPath: /csi
            name: socket-dir
      volumes:
        - hostPath:
            path: /var/lib/kubelet/plugins/csi-sanlock-lvm
            type: DirectoryOrCreate
          name: socket-dir
